fix overscroll on mobile phones

--- a/src/styles/blocks/body.scss
+++ b/src/styles/blocks/body.scss
@@ -5,6 +5,12 @@
 
   background-color: $white-accent;
 
+  overscroll-behavior-x: none;
+
+  &__main {
+    overflow-x: hidden;
+  }
+
   &__footer {
     margin-top: 80px;
 
