--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,4 +1,5 @@
 .page {
+  overscroll-behavior-x: none;
   scroll-behavior: smooth;
 
   &__container {
